tuto/kong-key-kube/01-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grade-submission-api
  namespace: grade-demo
  labels:
    app: grade-submission

spec:
  replicas: 1
  selector:
    matchLabels:
      app: grade-submission
  template:
    metadata:
      labels:
        app: grade-submission
    spec:
      containers:
      - name: grade-submission-api
        image: rslim087/kubernetes-course-grade-submission-api:stateless
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
