tuto/kong-key-kube/10-kong-ingress.yaml
# kong-ingress.yaml
# kubectl apply -f tuto/kong-key-kube/10-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
 name: grade-submission
 namespace: grade-demo
 annotations:
   konghq.com/strip-path: "false"  # don't remove prefix (sample: /api/grades => /grades)
   konghq.com/plugins: grade-auth, grade-rate    # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"

spec:
 ingressClassName: kong
 rules:
   - http:
       paths:
         - path: /grades
           pathType: Prefix
           backend:
             service:
               name: grade-submission-api   # Name of your K8s Service
               port:
                 number: 3000             # Port exposed by your Service
